--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>G-WebWorld - Dashboard</title>
+  <title>G-WebMaster - Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     body {
@@ -82,7 +82,7 @@
 <body class="min-h-screen bg-gradient-to-br from-blue-50 to-white transition-colors duration-300">
   <header class="bg-white shadow-md sticky top-0 z-50 transition-colors duration-300">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex flex-col md:flex-row items-center justify-between gap-4">
-      <h1 class="text-3xl font-bold text-blue-700">G-WebWorld</h1>
+      <h1 class="text-3xl font-bold text-blue-700">G-WebMaster</h1>
       <nav class="flex items-center space-x-4 sm:space-x-6 text-center">
         <a href="#home" class="nav-link text-gray-700 hover:text-blue-700 font-medium">Home</a>
         <a href="#about" class="nav-link text-gray-700 hover:text-blue-700 font-medium">About</a>
@@ -98,7 +98,7 @@
 
   <main id="home" class="py-10 px-4 sm:px-6 lg:px-8 max-w-6xl mx-auto">
     <section class="text-center mb-10 px-2">
-      <h2 class="text-3xl sm:text-4xl font-semibold text-gray-800 mb-3">Welcome to <span class="text-blue-600">G-WebWorld</span></h2>
+      <h2 class="text-3xl sm:text-4xl font-semibold text-gray-800 mb-3">Welcome to <span class="text-blue-600">G-WebMaster</span></h2>
       <p class="text-gray-600 text-base sm:text-lg">A central dashboard for all my creative and development projects.</p>
     </section>
 
@@ -148,7 +148,7 @@
 
   <section id="about" class="bg-white mt-16 py-10 px-4 border-t dark:bg-gray-900 dark:border-gray-700 transition-colors duration-300">
     <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-2xl font-bold text-gray-800 mb-4">About G-WebWorld</h2>
+      <h2 class="text-2xl font-bold text-gray-800 mb-4">About G-WebMaster</h2>
       <p class="text-gray-600 text-md">GWebWorld is a professional dashboard created by Gufaran Mujawar. It brings together a wide range of educational tools, AI utilities, developer resources, and personal creations in one simple and beautiful interface.</p>
     </div>
   </section>
